--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -6,5 +6,13 @@
   box-sizing: border-box;
   font-family: 'Montserrat';
   font-weight: 700;
-  
+}
+
+.main-btn {
+  padding: 15px 40px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 22px;
+  cursor: pointer;
 }
