--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -28,3 +28,14 @@
   color:$primary-color;
   border: 1px solid $primary-color;
 }
+
+.title {
+  font-family: Montserrat;
+font-style: normal;
+font-weight: bold;
+font-size: 58px;
+line-height: 80px;
+letter-spacing: 0.2px;
+color: $text-color;
+margin-bottom: 35px;
+}
