--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -11,7 +11,7 @@
     }
     &__error {
         font-family: 'Montserrat';
-        color:red;
+        color:$danger-color;
         font-size: 12px;
         margin-top: -12px;
     }
